--- a/package.json
+++ b/package.json
@@ -16,5 +16,12 @@
   "bugs": {
     "url": "https://github.com/maxsmoke/liri-node-app/issues"
   },
-  "homepage": "https://github.com/maxsmoke/liri-node-app#readme"
+  "homepage": "https://github.com/maxsmoke/liri-node-app#readme",
+  "dependencies": {
+    "dotenv": "^5.0.1",
+    "node-spotify-api": "^1.0.7",
+    "omdb-client": "^2.0.0",
+    "request": "^2.85.0",
+    "twitter": "^1.7.1"
+  }
 }
